Disabling zoom, setting image on index page to 100% - Attempt to prevent horizontal scrolling; doesn't work yet

--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -6,9 +6,19 @@ $mapWidth : 100%;
 $mapHeight : 400px;
 $mainContainerPadding: 5px;
 
+body{
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
+}
+
 #map-canvas {
   width: $mapWidth; 
   height: $mapHeight;
+}
+
+.map-img {
+  width: 100%;
 }
 
 #pac-input {
